# zzcoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build_msvc/: README.md
contrib/: README.md  gitian-build.py  install_db4.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-zzcoin.md  release-process.md  tor.md  zmq.md  zzcoin-conf.md
doc/man/: Makefile.am  zzcoin-cli.1  zzcoin-qt.1  zzcoin-tx.1  zzcoin-wallet.1  zzcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  (+55 more)
(+306 files in other folders)
